--- a/Munyn/Views/Nodes/HostNodeView.axaml
+++ b/Munyn/Views/Nodes/HostNodeView.axaml
@@ -52,7 +52,7 @@
 							<TextBlock Margin="5,0,0,0" Text="IP:" Foreground="{StaticResource BodyTextColor}"/>
 							<TextBlock Text="192.168.1.143" Foreground="{StaticResource BodyTextColor}"/>
 						</StackPanel>
-						
+
 						<StackPanel Margin="10,5,10,5" Orientation="Horizontal">
 							<Svg Path="avares://Munyn/Assets/Icons/linux-icon.svg"  Width="20"></Svg>
 							<TextBlock Margin="5,0,0,0" Text="OS:" Foreground="{StaticResource BodyTextColor}"/>
@@ -68,11 +68,11 @@
 							<StackPanel Margin="10,0,5,0" Orientation="Horizontal">
 								<Svg Path="avares://Munyn/Assets/Icons/people-fill-magenta.svg"  Width="20"></Svg>
 								<TextBlock Margin="5,0,0,0" Text="Users:" Foreground="{StaticResource BodyTextColor}"/>
-								<TextBlock Text="4" Foreground="{StaticResource BodyTextColor}"/>
+								<TextBlock Text="{Binding UserCount}" Foreground="{StaticResource BodyTextColor}"/>
 							</StackPanel>
 						</StackPanel>
-						
-						
+
+
 						<!-- Services Panel -->
 						<StackPanel>
 							<Border Margin="10,0,10,0" BorderThickness="3" CornerRadius="5,5,0,0">
@@ -91,39 +91,47 @@
 								<StackPanel Orientation="Horizontal">
 									<Svg Path="avares://Munyn/Assets/Icons/database-fill-gear.svg" Width="20"/>
 									<TextBlock Text="Services"  Foreground="#f2f2f2" FontSize="14" Margin="10,1,0,0"></TextBlock>
-									
-									<TextBlock Text="4" Foreground="#f2f2f2" Margin="4,1,0,0"></TextBlock>
+
+									<TextBlock Text="{Binding ServiceCount}" Foreground="#f2f2f2" Margin="4,1,0,0"></TextBlock>
 
 								</StackPanel>
 							</Border>
 
-							<Border Margin="10,0,10,0" BorderBrush="#e0e0e0" BorderThickness="3" CornerRadius="0,0,5,5" MaxHeight="200" >
+							<Border Margin="10,0,10,0" BorderBrush="#e0e0e0" Background="#e0e0e0" BorderThickness="3" CornerRadius="0,0,5,5" MaxHeight="200" >
 								<ScrollViewer>
-									<StackPanel>
-										<StackPanel Orientation="Horizontal">
-											<TextBlock Margin="5,0,0,0" Text="SSH (22)" Foreground="{StaticResource BodyTextColor}"/>
-											<Svg Margin="4,0,0,0" Path="avares://Munyn/Assets/Icons/thunder-icon.svg" Width="10"/>
+									<ItemsControl x:Name="ServiceList" ItemsSource="{Binding Services}">
+										<ItemsControl.ItemTemplate>
+											<DataTemplate>
+												<StackPanel Orientation="Horizontal">
+													<TextBlock Margin="5,0,0,0" Text="{Binding ServiceName}" Foreground="{StaticResource BodyTextColor}"/>
+													<Svg Margin="4,0,0,0" Path="avares://Munyn/Assets/Icons/thunder-icon.svg" Width="10" IsVisible="{Binding IsCompromised}"/>
+												</StackPanel>
+											</DataTemplate>
+										</ItemsControl.ItemTemplate>
 
-										</StackPanel>
-										<StackPanel Orientation="Horizontal">
-											<TextBlock Margin="5,0,0,0" Text="Web (80) - https://mailing.htb" Foreground="{StaticResource BodyTextColor}"/>
-											<Svg Margin="4,0,0,0" Path="avares://Munyn/Assets/Icons/thunder-icon.svg" Width="10"/>
-
-										</StackPanel>
-										<StackPanel Orientation="Horizontal">
-											<TextBlock Margin="5,0,0,0" Text="SMB (445)" Foreground="{StaticResource BodyTextColor}"/>
-										</StackPanel>
-										<StackPanel Orientation="Horizontal">
-											<TextBlock Margin="5,0,0,0" Text="FTP (20/21)" Foreground="{StaticResource BodyTextColor}"/>
-										</StackPanel>
-										
-
-									</StackPanel>
+										<ItemsControl.ItemsPanel>
+											<ItemsPanelTemplate>
+												<StackPanel MinHeight="20"></StackPanel>
+											</ItemsPanelTemplate>
+										</ItemsControl.ItemsPanel>
+									</ItemsControl>
 								</ScrollViewer>
-							
-							
+
+
 							</Border>
 						</StackPanel>
+						<Button HorizontalAlignment="Center" CornerRadius="5" Margin="10" Command="{Binding EnterContextButtonCommand}">
+							<Button.Background>
+								<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
+									<GradientStop Color="#19c8f3" Offset="0.0"/>
+									<GradientStop Color="#6551e5" Offset="1.0"/>
+								</LinearGradientBrush>
+							</Button.Background>
+							<StackPanel Orientation="Horizontal">
+								<TextBlock Text="Enter Context"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="12" Margin="5"></TextBlock>
+								<Svg Path="avares://Munyn/Assets/Icons/arrow-next-right-icon.svg" Width="6" Margin="0,0,5,0"/>
+							</StackPanel>
+						</Button>
 					</StackPanel>
 				</Border>
 			</StackPanel>
