--- a/Munyn/Views/MainView.axaml
+++ b/Munyn/Views/MainView.axaml
@@ -28,7 +28,7 @@
 			<nodes:AssetNodeView DataContext="{Binding}" ZIndex="10"></nodes:AssetNodeView>
 		</DataTemplate>
 		<DataTemplate DataType="vm:PathBaseViewModel">
-			<Path Data="{Binding PathData}" Stroke="#f2f2f2" StrokeThickness="2"/>
+			<Path Data="{Binding PathData}" Stroke="#f2f2f2" StrokeThickness="2" ZIndex="-1"/>
 		</DataTemplate>
 	</UserControl.DataTemplates>
 	
@@ -65,9 +65,11 @@
 			<Button Command="{Binding ToggleTrayCommand}">
 				<Svg Path="avares://Munyn/Assets/Icons/window-stack.svg"/>
 			</Button>
-			<Button>
-				<Svg Path="avares://Munyn/Assets/Icons/bezier2.svg"/>
-			</Button>
+			<Border CornerRadius="3" BorderThickness="3" BorderBrush="{Binding PathToolBorderColor}" Margin="10">
+				<Button Command="{Binding TogglePathToolCommand}" Margin="0">
+					<Svg Path="avares://Munyn/Assets/Icons/bezier2.svg"/>
+				</Button>
+			</Border>
 
 		</StackPanel>
 
@@ -203,7 +205,7 @@
 						
 						<ItemsControl.ItemsPanel>
 							<ItemsPanelTemplate>
-								<views:NodeCanvasView Background="#303040"/>
+								<views:NodeCanvasBaseView x:Name="CanvasView" Background="#303040"/>
 							</ItemsPanelTemplate>
 						</ItemsControl.ItemsPanel>
 					</ItemsControl>
