--- a/Munyn/Views/NodeCanvasView.axaml
+++ b/Munyn/Views/NodeCanvasView.axaml
@@ -3,10 +3,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-			x:Class="Munyn.Views.NodeCanvasView">
+			 xmlns:vm="using:Munyn.ViewModels"
+			 x:DataType="vm:MainViewModel"
+			 PointerMoved="OnPointerMoved"
+			 PointerReleased="OnPointerReleased"
+			x:Class="Munyn.Views.NodeCanvasBaseView">
 			
 	<Grid x:Name="CanvasHost" ClipToBounds="True" Background="Transparent">
-		<Canvas x:Name="NodeCanvas" Width="3000" Height="3000" RenderTransformOrigin="0,0" Background="#303040"/>
+		<Canvas x:Name="NodeCanvasBase" Width="3000" Height="3000" RenderTransformOrigin="0,0" Background="#303040"/>
 		
 	</Grid>
 </UserControl>
