--- a/Munyn/Views/Nodes/HostNodeView.axaml
+++ b/Munyn/Views/Nodes/HostNodeView.axaml
@@ -38,7 +38,7 @@
 					<Button Command="{Binding EnterContextButtonCommand}" Background="Transparent">
 						<Svg Path="avares://Munyn/Assets/Icons/pc-display.svg" Width="20"/>
 					</Button>
-					<TextBlock Text="{Binding HostName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="16" Margin="10"></TextBlock>
+					<TextBlock Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="16" Margin="10"></TextBlock>
 				</StackPanel>
 				</Border>
 
