--- a/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
+++ b/Munyn/Views/Nodes/NodeDetails/NodeDetailsView.axaml
@@ -23,19 +23,7 @@
 			</UserControl.Resources>
 			
 		<StackPanel MinWidth="200" MaxWidth="400" MaxHeight="700">			
-				<Border BorderThickness="3" CornerRadius="5,5,0,0">
-					<Border.BorderBrush>
-						<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
-							<GradientStop Color="#19c8f3" Offset="0.0"/>
-							<GradientStop Color="#6551e5" Offset="1.0"/>
-						</LinearGradientBrush>
-					</Border.BorderBrush>
-					<Border.Background>
-						<LinearGradientBrush StartPoint="0%,0%" EndPoint="100%,50%">
-							<GradientStop Color="#19c8f3" Offset="0.0"/>
-							<GradientStop Color="#6551e5" Offset="1.0"/>
-						</LinearGradientBrush>
-					</Border.Background>
+				<Border BorderThickness="3" CornerRadius="5,5,0,0" BorderBrush="{Binding NodeTheme}" Background="{Binding NodeTheme}">
 					<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
 						<TextBox Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="24" Margin="10" Background="#00000000" BorderThickness="0"></TextBox>
 					</StackPanel>
