--- a/Munyn/Views/Nodes/NodeView.axaml
+++ b/Munyn/Views/Nodes/NodeView.axaml
@@ -24,9 +24,7 @@
 	<StackPanel MinWidth="200" MaxWidth="400">
 		<Border BorderThickness="3" CornerRadius="5,5,0,0" BorderBrush="{Binding NodeTheme}" Background="{Binding NodeTheme}">
 			<StackPanel Orientation="Horizontal">
-				<Button Command="{Binding EnterContextButtonCommand}" Background="Transparent">
-					<Svg Path="avares://Munyn/Assets/Icons/pc-display.svg" Width="20"/>
-				</Button>
+				<Svg Path="avares://Munyn/Assets/Icons/pc-display.svg" Width="20"/>
 				<TextBlock Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="16" Margin="10"></TextBlock>
 			</StackPanel>
 		</Border>
@@ -38,9 +36,7 @@
 				<ItemsControl x:Name="PropertiesItemControl" ItemsSource="{Binding PropertiesInNodeView}">
 					<ItemsControl.ItemTemplate>
 						<DataTemplate>
-							<StackPanel Orientation="Horizontal">
-								<properties:NodeGraphViewProperty DataContext="{Binding}"/>
-							</StackPanel>
+							<properties:NodeGraphViewProperty DataContext="{Binding}"/>
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
 
@@ -53,7 +49,7 @@
 
 
 
-				<Button HorizontalAlignment="Center" CornerRadius="5" Margin="10" Command="{Binding EnterContextButtonCommand}" Background="{Binding NodeTheme}">
+				<Button HorizontalAlignment="Center" CornerRadius="5" Margin="10" Command="{Binding EnterContextButtonCommand}" Background="{Binding NodeTheme}" IsVisible="{Binding IsContext}">
 					<StackPanel Orientation="Horizontal">
 						<TextBlock Text="Enter Context"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="12" Margin="5"></TextBlock>
 						<Svg Path="avares://Munyn/Assets/Icons/arrow-next-right-icon.svg" Width="6" Margin="0,0,5,0"/>
