--- a/Munyn/App.axaml
+++ b/Munyn/App.axaml
@@ -3,7 +3,13 @@
              x:Class="Munyn.App"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
-
+	<Application.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<MergeResourceInclude Source="/Assets/IconDictionary.axaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Application.Resources>
     <Application.Styles>
         <FluentTheme />
 		
