--- a/Munyn/Views/Nodes/NodeView.axaml
+++ b/Munyn/Views/Nodes/NodeView.axaml
@@ -24,7 +24,7 @@
 	<StackPanel MinWidth="200" MaxWidth="400">
 		<Border BorderThickness="3" CornerRadius="5,5,0,0" BorderBrush="{Binding NodeTheme}" Background="{Binding NodeTheme}">
 			<StackPanel Orientation="Horizontal">
-				<Svg Path="avares://Munyn/Assets/Icons/pc-display.svg" Width="20"/>
+				<PathIcon Margin="5,0,0,0" Height="20" Width="20" Foreground="#f2f2f2" Data="{StaticResource pc-display}"/>				
 				<TextBlock Text="{Binding NodeName}"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="16" Margin="10"></TextBlock>
 			</StackPanel>
 		</Border>
