Removed pointer pressed in main view

--- a/Munyn/Views/MainView.axaml
+++ b/Munyn/Views/MainView.axaml
@@ -181,7 +181,7 @@
 									<TextBlock Text="Back"></TextBlock>
 								</StackPanel>
 							</Button>
-							<ItemsControl x:Name="HostNodeItemsControl" Grid.Row="1" ItemsSource="{Binding VisableNodes}">
+							<ItemsControl x:Name="HostNodeItemsControl" Grid.Row="1" ItemsSource="{Binding VisableNodes}" Background="Transparent">
 
 
 								<ItemsControl.Styles>
