--- a/Munyn/Views/MainView.axaml
+++ b/Munyn/Views/MainView.axaml
@@ -100,12 +100,12 @@
 				<!--TopBar Right Grouping-->
 				<StackPanel Grid.Column="1" Orientation="Horizontal" Background="Transparent">
 					<Button Command="{Binding SaveCommand}">
-						<Svg Path="avares://Munyn/Assets/Icons/save-icon.svg"/>
+						<PathIcon Data="{StaticResource save-arrow}" Width="20" Foreground="#f2f2f2"/>
 					</Button>
 					<Button Command="{Binding LoadCommand}">
-						<Svg Path="avares://Munyn/Assets/Icons/folder-line-icon.svg"/>
+						<PathIcon Data="{StaticResource open}" Width="20" Foreground="#f2f2f2"/>
 					</Button>
-					<TextBlock Grid.Column="0" Text="FileName.json" FontSize="16" Margin="10,0,15,0" VerticalAlignment="Center"/>
+					<TextBlock Grid.Column="0" Text="{Binding LoadedFileName}" FontSize="16" Margin="10,0,15,0" VerticalAlignment="Center"/>
 				</StackPanel>
 			</Grid>
 
