--- a/Munyn/Views/Nodes/NodeView.axaml
+++ b/Munyn/Views/Nodes/NodeView.axaml
@@ -33,7 +33,7 @@
 		<!-- INFO PANEL -->
 		<Border BorderBrush="#f7f7f7" BorderThickness="3" CornerRadius="0,0,5,5" >
 			<StackPanel Background="#f7f7f7">
-				<ItemsControl x:Name="PropertiesItemControl" ItemsSource="{Binding PropertiesInNodeView}">
+				<ItemsControl x:Name="PropertiesItemControl" ItemsSource="{Binding PropertiesInNodeView}" Margin="0,0,0,5">
 					<ItemsControl.ItemTemplate>
 						<DataTemplate>
 							<properties:NodeGraphViewProperty DataContext="{Binding}"/>
@@ -49,7 +49,7 @@
 
 
 
-				<Button HorizontalAlignment="Center" CornerRadius="5" Margin="10" Command="{Binding EnterContextButtonCommand}" Background="{Binding NodeTheme}" IsVisible="{Binding IsContext}">
+				<Button HorizontalAlignment="Center" CornerRadius="5" Margin="10,10,10,5" Command="{Binding EnterContextButtonCommand}" Background="{Binding NodeTheme}" IsVisible="{Binding IsContext}">
 					<StackPanel Orientation="Horizontal">
 						<TextBlock Text="Enter Context"  Foreground="#f2f2f2" FontWeight="Bold" FontSize="12" Margin="5"></TextBlock>
 						<Svg Path="avares://Munyn/Assets/Icons/arrow-next-right-icon.svg" Width="6" Margin="0,0,5,0"/>
