Removed SVG.Skia for linux compatability

--- a/Munyn/Views/Misc/ContextPathEntry.axaml
+++ b/Munyn/Views/Misc/ContextPathEntry.axaml
@@ -8,10 +8,10 @@
              x:Class="Munyn.Views.Misc.ContextPathEntry">
 
 	<StackPanel Orientation="Horizontal">
-		<Svg Path="avares://Munyn/Assets/Icons/arrow-next-right-icon.svg" Width="10" IsVisible="{Binding ArrowVisible}"/>
+		<PathIcon Data="{StaticResource arrow-next-right-icon}" Width="10" IsVisible="{Binding ArrowVisible}"/>
 		<Button Margin="-2,0,-2,0" Background="Transparent" Command="{Binding EnterContextButtonCommand}">
 			<StackPanel Orientation="Horizontal">
-				<Svg Path="{Binding IconPath}" Width="17" Margin="4,0,4,0"/>
+				<PathIcon Data="{StaticResource pc-display}" Width="17" Margin="4,0,4,0"/>
 				<TextBlock Text="{Binding ContextName}" Margin="0,2,0,2" Foreground="WhiteSmoke" FontSize="12"></TextBlock>
 			</StackPanel>
 		</Button>
